--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <title>Ninja</title>
   <link rel="icon" href="./favicon.ico">
   <link rel="stylesheet" href="style.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 </head>
 
 <body>
@@ -72,7 +73,7 @@
         </figure>
         <dl>
           <dt>
-            <i class="fa fa-ban"></i>
+            <i class="fa fa-lock"></i>
             防截获
           </dt>
           <dd>聊天内容基于区块链特性进行加密、 碎片化随机节点路径传输</dd>
@@ -97,7 +98,7 @@
         </figure>
         <dl>
           <dt>
-            <i class="fa fa-lock"></i>
+            <i class="fa fa-ban"></i>
             防泄露
           </dt>
           <dd>使用区块链加密级别的非对称加密技术进行端到端的密钥交换，聊天信息使用交换后的AES密钥加密 保证只有密钥交换的参与方才能解密信息。</dd>
