--- a/styles/index.html
+++ b/styles/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width">
   <title>Ninja</title>
   <link rel="icon" href="./favicon.ico">
-  <link rel="stylesheet" href="./styles/css/style.min.css">
-  <!-- <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> -->
-  <link href="./styles/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.min.css">
+  <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 </head>
 
 <body>
