--- a/purchase.html
+++ b/purchase.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width">
-  <title>Document</title>
-  <link rel="stylesheet" href="style.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <title>购买</title>
+  <link rel="stylesheet" href="./styles/css/style.min.css">
+  <link href="./styles/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
   <div class="purchase-wrap">
