--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
         </figure>
       </div>
     </section>
+      <img  class="nostr" src="./nostr.png"/>
     <!-- 标语 -->
     <div class="slogan-bar">
       <h2 class="title">所有<span>免费</span>的</h2>
