--- a/index.html
+++ b/index.html
@@ -125,7 +125,13 @@
         </figure>
       </div>
     </section>
-      <img  class="nostr" src="./nostr.png"/>
+    <h1 style="text-align: center;width: 100%;background-color: white;height: 100px; text-align: center;line-height: 100px;">与Nostr兼容</h1>
+    <div class="nostr" >
+      <img  src="./nostr1.png"/>
+      <img  src="./nostr2.png"/>
+      <img  src="./nostr3.png"/>
+    </div>
+     
     <!-- 标语 -->
     <div class="slogan-bar">
       <h2 class="title">所有<span>免费</span>的</h2>
