--- a/index.html
+++ b/index.html
@@ -38,11 +38,19 @@
         <div class="btn-group">
           <a class="btn-android" target="_blank" href="https://ninjahome.github.io/ninja.apk">
             <i class="fa fa-android"></i>
-            下载安卓 APP
+            下载Ninja安卓 APP
           </a>
           <a class="btn-ios" target="_blank" href="https://testflight.apple.com/join/2EccEH6p">
             <i class="fa fa-apple"></i>
-            下载iOS APP
+            下载Ninja iOS APP
+          </a>
+          <a class="btn-android" target="_blank" href="https://ninjahome.github.io/dessage.apk">
+            <i class="fa fa-android"></i>
+            下载Dessage安卓 APP
+          </a>
+          <a class="btn-ios" target="_blank" href="https://testflight.apple.com/join/8rZ1eH4s">
+            <i class="fa fa-apple"></i>
+            下载Dessage iOS APP
           </a>
           <a class="ios-help" href="javascript:void(0);">iOS 下载安装帮助<i class="fa fa-angle-double-right"></i> </a>
 
